--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 logging.level.org.springframework.web=DEBUG
-spring.datasource.initialize=true
+
+spring.datasource.url=jdbc:hsqldb:file:/Users/denis/Documents/Java/Idea_Projects/DockerPlatform/db/
+spring.datasource.username=sa
+
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=none
