adding start, stop, remove actions for containers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8081
+
 logging.level.org.springframework.web=DEBUG
 
 spring.datasource.url=jdbc:hsqldb:file:/Users/denis/Documents/Java/Idea_Projects/DockerPlatform/db/
