--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,10 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'spring-boot'
 apply plugin: 'com.bmuschko.docker-java-application'
+//apply plugin: "kotlin"
 
 buildscript {
+//    ext.kotlin_version = '1.0.1-2'
     repositories {
         mavenCentral()
         jcenter()
@@ -14,14 +16,21 @@ buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.3.RELEASE")
         classpath 'com.bmuschko:gradle-docker-plugin:2.6.7'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+//sourceSets {
+//    main.kotlin.srcDirs += 'src/main/java'
+//    main.java.srcDirs += 'src/main/java'
+//}
+
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -31,6 +40,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'com.google.guava:guava'
     compile 'org.hsqldb:hsqldb'
+//    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+//    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
