--- a/build.gradle
+++ b/build.gradle
@@ -5,28 +5,25 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'spring-boot'
 apply plugin: 'com.bmuschko.docker-java-application'
-//apply plugin: "kotlin"
+apply plugin: "org.sonarqube"
 
 buildscript {
-//    ext.kotlin_version = '1.0.1-2'
     repositories {
         mavenCentral()
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.3.RELEASE")
         classpath 'com.bmuschko:gradle-docker-plugin:2.6.7'
-//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.0-rc1"
     }
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
-
-//sourceSets {
-//    main.kotlin.srcDirs += 'src/main/java'
-//    main.java.srcDirs += 'src/main/java'
-//}
 
 repositories {
     mavenCentral()
@@ -40,8 +37,6 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'com.google.guava:guava'
     compile 'org.hsqldb:hsqldb'
-//    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-//    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
