--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ repositories {
 
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
-    compile 'com.github.docker-java:docker-java:3.0.0-RC3'
+    compile 'com.github.docker-java:docker-java:3.0.3'
     compile 'org.springframework.boot:spring-boot-starter-freemarker'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'com.google.guava:guava'
