--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-freemarker'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'com.google.guava:guava'
-    сщьзшду 'org.reflections:reflections:0.9.9-RC1'
+    compile 'org.reflections:reflections:0.9.9-RC1'
     compile 'org.hsqldb:hsqldb'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
