--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ repositories {
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'com.github.docker-java:docker-java:3.0.3'
-//    compile 'org.springframework.boot:spring-boot-starter-freemarker'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'org.liquibase:liquibase-core:3.5.3'
     compile 'com.google.guava:guava'
     compile 'org.reflections:reflections:0.9.9-RC1'
     compile 'org.hsqldb:hsqldb'
