--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=sa
 
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
+
+liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
