--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile 'com.google.guava:guava'
     compile 'org.reflections:reflections:0.9.9-RC1'
     compile 'org.hsqldb:hsqldb'
+
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.5.2.RELEASE'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
