--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ apply plugin: "org.sonarqube"
 
 buildscript {
     repositories {
+        mavenLocal()
         mavenCentral()
         jcenter()
         maven {
@@ -26,18 +27,21 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     mavenCentral()
     jcenter()
 }
 
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
-    compile 'com.github.docker-java:docker-java:3.0.6'
+    compile 'com.github.docker-java:docker-java:3.0.10-SNAPSHOT'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
     compile 'org.liquibase:liquibase-core:3.5.3'
     compile 'com.google.guava:guava'
     compile 'org.reflections:reflections:0.9.9-RC1'
     compile 'org.hsqldb:hsqldb'
+    compile 'org.projectlombok:lombok:1.16.16'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.5.2.RELEASE'
 }
